# local-transcriber

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: PRD.md  backlog.md  benchmark-2026-03-23.md  gpu.md  plan.md  research-amd-acceleration.md  review-stages-1-3.md  review-stages-4-5-rerun.md  review-stages-4-5.md
docs/adr/: 001-cuda-bootstrap.md  002-batch-and-config.md  003-pluggable-backends.md  004-compute-type-defaults.md  005-onnx-asr-backend.md  005-parakeet-backend.md  005-parakeet-evaluation.md  006-onnx-asr-backend.md
docs/superpowers/plans/: 2026-04-18-parakeet-backend.md  2026-04-25-parakeet-backend-implementation.md
docs/superpowers/specs/: 2026-04-18-parakeet-backend-design.md  2026-04-25-parakeet-backend-design.md
scripts/: compare_backends.py  measure_parakeet.py  parakeet_vad_tune.py  quality_bench.py
src/local_transcriber/: _cuda_bootstrap.py  cli.py  config.py  context_menu.py  formatter.py  quality.py  transcriber.py  types.py  utils.py
src/local_transcriber/backends/: __init__.py  base.py  faster_whisper.py  onnx_asr.py  openvino.py  parakeet.py
tests/: test_backend_openvino.py  test_backend_parakeet.py  test_cli.py  test_config.py  test_context_menu.py  test_cuda_bootstrap.py  test_formatter.py  test_onnx_asr.py  test_quality.py  test_transcriber.py  test_utils.py
